--- a/_pages/research.html
+++ b/_pages/research.html
@@ -211,7 +211,7 @@ author_profile: true
   
   <li>
     <em>Under contract</em>:
-    <span class="me">Trastulli, F.</span>.
+    <span class="me">Trastulli, F.</span>
     <em>Varieties of Social Democracy in Western Europe: The Impact of External Constraints on Ideological Differences</em>.
     Palgrave Macmillan.
     <span class="badge forthcoming">Forthcoming</span>
@@ -261,11 +261,11 @@ author_profile: true
 <h2>Current projects</h2>
 <ul>
   <li>Angelucci, A., Carrieri, L., <span class="me">Trastulli, F.</span>, & Vittori, D. Class, gender, and vote for left and radical right parties.</li>
-  <li>Crulli, M., Emanuele, V., &amp; <span class="me">Trastulli, F.</span>. Intersectionality and electoral participation.</li>
-  <li>Dassonneville, R., &amp; <span class="me">Trastulli, F.</span>. Working-Class Electoral Cross-Pressures in 9 Western European Countries (1989-2024).</li>
-  <li>De Sio, L., Paparo, A., &amp; <span class="me">Trastulli, F.</span>. Who takes the cue? Experimental evidence on voters’ political sophistication in party and leader cueing of issue positions.</li>
-  <li>Lourenço, P., Prearo, M., &amp; <span class="me">Trastulli, F.</span>. Riding the Electoral Cycle: Dynamics of Anti-LGBTIQ+ Mobilisation in Four Western European Countries.</li>
-  <li><span class="me">Trastulli, F.</span>. The Intersectional Decline of Working-Class Support for the Left: Evidence from 19 Western European countries (2002-2020).</li>
+  <li>Crulli, M., Emanuele, V., &amp; <span class="me">Trastulli, F.</span> Intersectionality and electoral participation.</li>
+  <li>Dassonneville, R., &amp; <span class="me">Trastulli, F.</span> Working-Class Electoral Cross-Pressures in 9 Western European Countries (1989-2024).</li>
+  <li>De Sio, L., Paparo, A., &amp; <span class="me">Trastulli, F.</span> Who takes the cue? Experimental evidence on voters’ political sophistication in party and leader cueing of issue positions.</li>
+  <li>Lourenço, P., Prearo, M., &amp; <span class="me">Trastulli, F.</span> Riding the Electoral Cycle: Dynamics of Anti-LGBTIQ+ Mobilisation in Four Western European Countries.</li>
+  <li><span class="me">Trastulli, F.</span> The Intersectional Decline of Working-Class Support for the Left: Evidence from 19 Western European countries (2002-2020).</li>
   <li><span class="me">Trastulli, F.</span>, Prearo, M., &amp; Pansardi, P. Individual-level determinants of LGBTIQ+ issue attitudes: Evidence from the traditionalist Italian context.</li>
 </ul>
 
