--- a/_pages/research.html
+++ b/_pages/research.html
@@ -11,7 +11,7 @@ author_profile: true
 <ol>
   <li>
     Off, G., &amp; <span class="me">Trastulli, F.</span> (2026).
-    Who Prioritises What? Determinants and Measurement of Voters’ Issue Prioritisation.
+    Who Prioritizes What? Determinants and Measurement of Voters’ Issue Prioritisation.
     <em>European Journal of Political Research</em>, <em>65</em>(1), 164–178.
     <a href="https://doi.org/10.1017/S1475676525100091" class="doi">
       https://doi.org/10.1017/S1475676525100091
