--- a/_pages/research.html
+++ b/_pages/research.html
@@ -62,7 +62,7 @@ author_profile: true
   <li>
     Prearo, M., &amp; <span class="me">Trastulli, F.</span> (2025).
     Double-edged Swords? Party Ideology, Activism, and Visibility in the Careers of Italian LGBT+ Politicians.
-    <em>Social Politics</em>.
+    <em>Social Politics</em>, <em>32</em>(4), 878–902.
     <a href="https://doi.org/10.1093/sp/jxae035" class="doi">
       https://doi.org/10.1093/sp/jxae035
     </a>
