--- a/_pages/research.html
+++ b/_pages/research.html
@@ -210,7 +210,7 @@ author_profile: true
   </li>
   
   <li>
-    <em>Under contract</em>:
+    <em>Forthcoming</em>:
     <span class="me">Trastulli, F.</span>
     <em>Varieties of Social Democracy in Western Europe: The Impact of External Constraints on Ideological Differences</em>.
     Palgrave Macmillan.
