--- a/_pages/research.html
+++ b/_pages/research.html
@@ -18,6 +18,16 @@ author_profile: true
     </a>
     <span class="badge oa">Open Access</span>
   </li>
+  
+  <li>
+    Capati, A., &amp; <span class="me">Trastulli, F.</span> (2026).
+    Large-Scale Crises and Variation in Social Democratic Europeanism: The Italian Democratic Party.
+    <em>Politics and Governance</em>, <em>14</em>, Article 11047.
+    <a href="https://doi.org/10.17645/pag.11047" class="doi">
+      https://doi.org/10.17645/pag.11047
+    </a>
+    <span class="badge oa">Open Access</span>
+  </li>
 
   <li>
     <span class="me">Trastulli, F.</span> (2025).
@@ -25,16 +35,6 @@ author_profile: true
     <em>Electoral Studies</em>, <em>98</em>, Article 103006.
      <a href="https://doi.org/10.1016/j.electstud.2025.103006" class="doi">
       https://doi.org/10.1016/j.electstud.2025.103006
-    </a>
-    <span class="badge oa">Open Access</span>
-  </li>
-
-  <li>
-    Capati, A., &amp; <span class="me">Trastulli, F.</span> (2025).
-    Large-Scale Crises and Variation in Social Democratic Europeanism: The Italian Democratic Party.
-    <em>Politics and Governance</em>.
-    <a href="https://doi.org/10.17645/pag.11047" class="doi">
-      https://doi.org/10.17645/pag.11047
     </a>
     <span class="badge oa">Open Access</span>
   </li>
