--- a/_pages/research.html
+++ b/_pages/research.html
@@ -265,6 +265,7 @@ author_profile: true
   <li>Dassonneville, R., &amp; <span class="me">Trastulli, F.</span> Working-Class Electoral Cross-Pressures in 9 Western European Countries (1989-2024).</li>
   <li>De Sio, L., Paparo, A., &amp; <span class="me">Trastulli, F.</span> Who takes the cue? Experimental evidence on voters’ political sophistication in party and leader cueing of issue positions.</li>
   <li>Lourenço, P., Prearo, M., &amp; <span class="me">Trastulli, F.</span> Riding the Electoral Cycle: Dynamics of Anti-LGBTIQ+ Mobilisation in Four Western European Countries.</li>
+  <li>Montecchio, L., Prearo, M., &amp; <span class="me">Trastulli, F.</span> Shifting Boundaries: The Struggle for LGBTIQ+ Equality in Italian Party Politics and Public Opinion.</li>
   <li><span class="me">Trastulli, F.</span> The Intersectional Decline of Working-Class Support for the Left: Evidence from 19 Western European countries (2002-2020).</li>
   <li><span class="me">Trastulli, F.</span>, Prearo, M., &amp; Pansardi, P. Individual-level determinants of LGBTIQ+ issue attitudes: Evidence from the traditionalist Italian context.</li>
 </ul>
