--- a/_pages/research.html
+++ b/_pages/research.html
@@ -90,6 +90,16 @@ author_profile: true
   </li>
 
   <li>
+    <span class="me">Trastulli, F.</span> (2025).
+    Le elezioni regionali del 2025 in Veneto: il “dopo- Zaia” e le partite interne al centrodestra sullo sfondo della (scontata) vittoria di Stefani.
+    <em>Regional Studies and Local Development</em>.
+    <a href="https://doi.org/10.25430/pupj-RSLD-2025-2-11" class="doi">
+      https://doi.org/10.25430/pupj-RSLD-2025-2-11
+    </a>
+    <span class="badge oa">Open Access</span>
+  </li>
+
+  <li>
     Prearo, M., &amp; <span class="me">Trastulli, F.</span> (2024).
     LGBTIQ+ Scholars within Political Science: An Exploratory Review of PSAs’ Good Practices and (Un)Available Data     
     <em>Italian Political Science</em>, <em>19</em>(3), 309–323.
